[content] home texts & /creations/...

--- a/creations/enfer-me-ment/index.html
+++ b/creations/enfer-me-ment/index.html
@@ -63,7 +63,7 @@
     <div id="hero" class="hero hero-top" style="background-image: url(/transtopie/assets/img/backgrounds/bg2.jpg)" >
       <div>
         <img src="/transtopie/assets/img/logo.png"/>
-          <h1>La rue fait mauvais genre</h1>
+          <h1>L'enfer me ment</h1>
       </div>
     </div>
 
@@ -71,7 +71,7 @@
       <div class="wrapper">
         <div class="bloc-pic"><img loading="lazy" src="/transtopie/assets/img/spectacles/rue-fait-mauvais-genre.png" alt=""></div>
         <div class="bloc-text">
-          <h2>Conte</h2><h3>audiovisuel</h3>
+          <h2>Fiction</h2><h3>historique</h3>
           <div class="ghcms ghcms-pres1">
             <p>Quel rapport entretient la femme à l'espace public la nuit ? La rue, de nuit, jongle entre ombre et lumière. La nuit porte en elle les paradoxes de la ville lumière, festive, permissive comme la crainte du sombre, de l'inconnu, du danger. </p>
             <p>
@@ -84,23 +84,6 @@ Cette performance questionne le rapport de la femme à la rue la nuit et dénonc
       </div>
     </section>
 
-
-    <section class="content bloc-img-left">
-      <div class="wrapper">
-        <div class="bloc-vid">
-          <iframe src="//v.calameo.com/?bkcode=006058682b52dc5e5af2d&amp;mode=mini" scrolling="no" allowtransparency="" allowfullscreen="allowfullscreen" style="margin:0 auto;" width="480" height="300" frameborder="0"></iframe>
-        </div>
-        <div class="bloc-text">
-          <h2>L'espace public des femmes</h2><h3>lieu de tous  les dangers</h3>
-          <div class="ghcms ghcms-espacepublic">
-            Ce spectacle invite particulièrement les femmes à se questionner sur leur rapport à l’espace public, souvent perçu comme le lieu de tous les dangers, en interrogeant les risques. Les femmes utilisent l’espace public, c’est-à-dire accessible à tous et gratuit, de manière différente  des hommes la nuit, par peur des incivilités et agressions mais également du fait d’un sentiment d’insécurité généré par les injonctions sociales auxquelles elles sont sujettes. À quel point ces perceptions d’insécurité sont-elles socialement construites ? Et comment pouvons-nous les renverser ?
-            <a href="https://www.calameo.com/books/006058682b52dc5e5af2d" target="_blank">Docs Présentation La Rue Fait Mauvais Genre Transtopie</a>
-          </div>
-<!--           <iframe src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&amp;feed=%2FKolectiv_webradio%2F24-novembre-2020-itw-malou-estenne-la-rue-fait-mauvais-genre%2F" width="100%" height="120" frameborder="0"></iframe>
-            <iframe id="cc-m-video-container-12631597726" class="cc-m-video-container" src="https://www.youtube-nocookie.com/embed/GZxMGZvvBxo?wmode=transparent&amp;vq=hd1080" allowfullscreen="true" frameborder="0"></iframe> -->
-        </div>
-      </div>
-    </section>
     <section class="content bloc-img-left">
       <div class="wrapper">
         <div class="bloc-pic"><img loading="lazy" src=""></div>
