--- a/creations/index.html
+++ b/creations/index.html
@@ -69,48 +69,37 @@
 
     <section class="content bloc-img-right">
       <div class="wrapper">
-        <div class="bloc-pic"><img loading="lazy" src="/transtopie/assets/img/spectacles/rue-fait-mauvais-genre.png" alt=""></div>
-        <div class="bloc-text">
-          <h2>La rue fait mauvais genre</h2><h3>conte audiovisuel</h3>
-          <div class="ghcms ghcms-ruemauvaisgenre">
-            <p>Quel rapport entretient la femme à l'espace public la nuit ? La rue, de nuit, jongle entre ombre et lumière. La nuit porte en elle les paradoxes de la ville lumière, festive, permissive comme la crainte du sombre, de l'inconnu, du danger. </p>
-            <p>
-
-Cette performance questionne le rapport de la femme à la rue la nuit et dénonce la misogynie banalisée qui l'occupe. La ville comme danger de lieu de vie pour les femmes est une construction sociale à laquelle nous ne pouvons pas déroger actuellement. Ainsi, cette performance se propose d’exposer une série de situations ordinaires qui se passent dans la rue sous l’angle du regard critique sur les dangers et intimidations que subissent les femmes au quotidien. Plaçons la question des rapports de genres en ville au cœur des préoccupations et invitons à se réapproprier de manière égalitaire l'espace public.</p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="content bloc-img-left">
-      <div class="wrapper">
-        <div class="bloc-vid">
-          <iframe src="//v.calameo.com/?bkcode=006058682b52dc5e5af2d&amp;mode=mini" scrolling="no" allowtransparency="" allowfullscreen="allowfullscreen" style="margin:0 auto;" width="480" height="300" frameborder="0"></iframe>
-        </div>
-        <div class="bloc-text">
-          <h2>L'espace public des femmes</h2><h3>lieu de tous  les dangers</h3>
-          <div class="ghcms ghcms-espacepublic">
-            Ce spectacle invite particulièrement les femmes à se questionner sur leur rapport à l’espace public, souvent perçu comme le lieu de tous les dangers, en interrogeant les risques. Les femmes utilisent l’espace public, c’est-à-dire accessible à tous et gratuit, de manière différente  des hommes la nuit, par peur des incivilités et agressions mais également du fait d’un sentiment d’insécurité généré par les injonctions sociales auxquelles elles sont sujettes. À quel point ces perceptions d’insécurité sont-elles socialement construites ? Et comment pouvons-nous les renverser ?
-            <a href="https://www.calameo.com/books/006058682b52dc5e5af2d" target="_blank">Docs Présentation La Rue Fait Mauvais Genre Transtopie</a>
-          </div>
-<!--           <iframe src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&amp;feed=%2FKolectiv_webradio%2F24-novembre-2020-itw-malou-estenne-la-rue-fait-mauvais-genre%2F" width="100%" height="120" frameborder="0"></iframe>
-            <iframe id="cc-m-video-container-12631597726" class="cc-m-video-container" src="https://www.youtube-nocookie.com/embed/GZxMGZvvBxo?wmode=transparent&amp;vq=hd1080" allowfullscreen="true" frameborder="0"></iframe> -->
-        </div>
-      </div>
-    </section>
-
-
-    <section class="content bloc-img-right">
-      <div class="wrapper">
         <div class="bloc-pic"><img loading="lazy" src="/transtopie/assets/img/spectacles/born-to-be-queer.png" alt=""></div>
         <div class="bloc-text">
           <h2>Born to be Queer</h2><h3>conférence gesticulée</h3>
           <div class="ghcms ghcms-b2bq">
             <iframe src="//v.calameo.com/?bkcode=0060586827ba0756ec020" scrolling="no" allowtransparency="" allowfullscreen="allowfullscreen" style="margin:0 auto;" width="480" height="300" frameborder="0"></iframe>
           </div>
+          <a class="bloc-link" href="/transtopie/creations/born-to-be-queer/" title="">Born to be queer</a>
+
         </div>
       </div>
     </section>
+    
+    <section class="content bloc-img-right">
+      <div class="wrapper">
+        <div class="bloc-pic"><img loading="lazy" src="/transtopie/assets/img/spectacles/rue-fait-mauvais-genre.png" alt=""></div>
+        <div class="bloc-text">
+          <h2>La rue fait mauvais genre</h2><h3>conte audiovisuel</h3>
+          <div class="ghcms ghcms-ruemauvaisgenre">
+            <p><strong>Quel rapport entretient la femme à l'espace public la nuit ?</strong></p>
+            <p>La rue, de nuit, jongle entre ombre et lumière. La nuit porte en elle les paradoxes de la ville lumière, festive, permissive comme la crainte du sombre, de l'inconnu, du danger.</p>
+            <p>Cette performance <strong>questionne le rapport de la femme à la rue la nuit et dénonce la misogynie banalisée qui l'occupe</strong>. La ville comme lieu dangereux pour les femmes est une construction sociale à laquelle nous ne pouvons pas déroger actuellement. </p>
+            <p>Ainsi, cette performance se propose d'exposer une série de situations ordinaires qui se passent dans la rue sous l’angle du regard critique sur les risques et intimidations que subissent les femmes au quotidien. </p>
+            <p>Plaçons la question des rapports de genres en ville au coeur des préoccupations et invitons à <strong>se réapproprier de manière égalitaire l'espace public</strong>.</p>
+          </div>
+          <a class="bloc-link" href="/transtopie/creations/la-rue-fait-mauvais-genre/" title="">La rue fait mauvais genre</a>
+        </div>
+      </div>
+    </section>
+
+
+
 
     <section class="content bloc-img-left">
       <div class="wrapper">
@@ -120,7 +109,9 @@ Cette performance questionne le rapport de la femme à la rue la nuit et dénonc
           <div class="ghcms ghcms-enfermement">
          <iframe src="//v.calameo.com/?bkcode=0060586824bd93ee1517f&amp;mode=mini" scrolling="no" allowtransparency="" allowfullscreen="allowfullscreen" style="margin:0 auto;" width="480" height="300" frameborder="0"></iframe>
           </div>
+        <a class="bloc-link" href="/transtopie/creations/enfer-me-ment/" title="">L'enfer me ment</a>
         </div>
+
       </div>
     </section>
 
@@ -143,7 +134,9 @@ En partenariat avec les archives départementales de l'Orne et municipales d'Ale
 
 Mehdi Meskini aux textes, Pierre Fourmeau à la composition musicale, et Clément Béguet à la trompette, ont délivré lors du vernissage de l'exposition "Les petits Châtelets, d'hier à aujourd'hui" une pièce émouvante et fidèle au passé qui a marqué les esprits du public, à qui cette création a fait résonance.  
           </div>
+          <a class="bloc-link" href="/transtopie/creations/resonance/" title="">Resonance</a>
         </div>
+
       </div>
     </section>
     <footer id="footer">
