--- a/index.html
+++ b/index.html
@@ -72,15 +72,21 @@
       <div class="wrapper  straight">
         <div class="bloc-pic"><img loading="lazy" src="/transtopie/assets/img/spectacles/rue-fait-mauvais-genre.png" alt="" title=""></div>
         <div class="bloc-text">
-          <h2>Créations & Spectacles</h2>
+          <h2>Spectacles</h2>
           <h3>association productrice de culture</h3>
           <div class=" ghcms ghcms-creas">
-            <p>L’association TRANSTOPIE vise à la lutte contre les discriminations par des approches artistiques et culturelles en créant des spectacles, en concevant des programmes d’action culturelle en lien avec les acteurs du territoire ornais, et en faisant la promotion de l’art sous toutes ses formes.
-Les projets montés jusqu’à présent et qui vont se développer au sein de l’association s’inscrivent dans une logique d’intérêt général dans la droite lignée de politiques publiques, c’est-à-dire l’accès à la culture pour tous en développant des projets d’action culturelle à destination des publics éloignés, la lutte contre les discriminations en favorisant l’appui aux pratiques artistiques qui combattent l’homophobie, le sexisme, le racisme et l’antisémitisme.</p><p>
-Le projet associatif de Transtopie rentre dans le cadre que l’on appelle également « l’économie sociale et solidaire des arts et de la culture ». Transtopie permet de renforcer l’identité des artistes et acteurs culturels locaux, reconnus dans leurs champs de compétences et leur rayon d’action. Elle apporte une visibilité à l’échelle régionale et propose un accompagnement au développement de projets. S’appuyant sur la solidarité entre les acteurs, elle développe des axes de mutualisation et de coopération dans la création de spectacles et d’événements sur-mesur</p>
+            <p>Depuis 2019, c'est par la création artistique que Transtopie s'attaque à des <strong>problématiques sociales contemporaines</strong>. </p>
+            <p>Fruits d'expériences personnelles et de rencontres, <strong>les spectacles prennent forme avec une écriture contemporaine</strong> toujours basée sur le réél.</p>
+            <p>Tous ont une même intention: révéler des enjeux actuels et engager des réflexions:  </p>
+            <ul>
+            <li><strong>Born to be Queer</strong>: construction de l'identité de genre</li>
+            <li><strong>La rue fait mauvais genre</strong>: place de la femme dans l'espace public</li>
+            <li><strong>L'enfer me ment</strong>: traitement des femmes en maison de correction</li>
+            <li><strong>Resonance</strong>: archives de maison correctionelle feminine</li>
+            </ul>
           </div>
           <div class="bloc-links-list">
-            <a class="bloc-link" href="/creations/" title="">Créations & Spéctacles</a>
+            <a class="bloc-link" href="/creations/" title="">Spéctacles</a>
           </div>
         </div>
       </div>
@@ -98,15 +104,16 @@ Le projet associatif de Transtopie rentre dans le cadre que l’on appelle égal
     <section class="content bloc-left">
       <div class="wrapper">
         <div class="bloc-text">
-          <h2>Voyage en Hétérotopie</h2>
-          <h3>programmes d’action culturelle</h3>
+          <h2>Programmes d’action culturelle</h2>
+          <h3>voyage en hétérotopie</h3>
           <div class=" ghcms ghcms-action">
-            <p>Lutte contre les discriminations par des approches artistiques et culturelles</p>
-            <p>Des projets qui s’inscrivent dans une logique d’intérêt général, d’accès à la culture pour tous,  à destination des publics éloignés</p><p>
-            la lutte contre les discriminations en favorisant l’appui aux pratiques artistiques qui combattent l’homophobie, le sexisme, le racisme et l’antisémitisme.</p>
-            <p>Transtopie vise à renforcer l’identité des artistes et acteurs culturels locaux, reconnus dans leurs champs de compétences et leur rayon d’action. Elle apporte une visibilité à l’échelle régionale et propose un accompagnement au développement de projets. S’appuyant sur la solidarité entre les acteurs, elle développe des axes de mutualisation et de coopération dans la création de spectacles et d’événements sur-mesure</p>
+            <div class="ghcms ghcms-action visible">
+              <p>Au-delà de ses créations propres, Transtopie vise à <strong>promouvoir la culture et son développement</strong> à travers tout un ensemble d'actions et démarches en lien avec de multiples acteurs locaux.</p>
+              <p>Nos programmes d'action culturelle couvrent un champs très large allant <strong>de l'espace public à la scène</strong>, des interventions aux spectacles en passant par des expos et des festivals.</p>
+              <p>Nos projets mettent l'accent sur la <strong>lutte contre les discriminations, l'accès à la culture pour tous</strong>, et visent à renforcer l’identité des artistes et les réseaux acteurs culturels locaux. Toujours dans une logique <strong>d'intérêt général, de solidarité et de coopération</strong>.</p>
+            </div>
           </div>
-          <a class="bloc-link" href="/residences-artistiques-normandie/" title="Présentation des conditions d'accueil pour nos résidences artistiques">Action Culturelle</a>
+          <a class="bloc-link" href="/transtopie/action-culturelle/" title="">Action Culturelle</a>
         </div>
       </div>
       <div class="placeholder"></div>
@@ -118,15 +125,17 @@ Le projet associatif de Transtopie rentre dans le cadre que l’on appelle égal
       <div class="wrapper">
         <div class="bloc-text">
           <h2>Arts et Territoires</h2>
-          <h3>rencontres, festivals, développement artistique local</h3>
+          <h3>développement artistique local</h3>
           <div class=" ghcms ghcms-rencontres">
+            
             <p>Des soirées spectacle, des scénographies sonores ou des parcours artistiques uniques et originaux sont pensés liés à un lieu, un thème ou un événement. </p>
             <p>Chaque événement est conçu dans l'échange avec les organisateurs et les habitants, en offrant des propositions clé en main.</p>
             <p>Comme un panier d'Amap, le panier culturel est une sélection de spectacles, objets d'art et ateliers de pratique artistique pour se découvrir de nouvelles passions et profiter du meilleur des propositions artistiques locales d'Alençon et sa région. </p>
             <p>Pour le maintien d'une culture locale et d'alternatives en matière de création artistique </p>
+          
           </div>
-          <a class="bloc-link" href="/residences-artistiques-normandie/" title="Présentation des conditions d'accueil pour nos résidences artistiques">Evenements</a>
-          <a class="bloc-link" href="/residences-artistiques-normandie/" title="Présentation des conditions d'accueil pour nos résidences artistiques">Panier Culture</a>
+          <a class="bloc-link" href="/transtopie/evenements/" title="">Festivals</a>
+          <a class="bloc-link" href="/transtopie/panier-culture/" title="">Panier Culture</a>
         </div>
       </div>
       <div class="placeholder"></div>
