[backend] urls, redirects, CNAME

--- a/spectacles/index.html
+++ b/spectacles/index.html
@@ -60,26 +60,89 @@
       </div>
     </header>
 
-    <div id="hero" class="hero hero-top" style="background-image: url(/transtopie/assets/img/backgrounds/bg3.jpg)" >
+    <div id="hero" class="hero hero-top" style="background-image: url(/transtopie/assets/img/backgrounds/bg2.jpg)" >
       <div>
         <img src="/transtopie/assets/img/logo.png"/>
-          <h1>Actualités</h1>
+          <h1>Spectacles</h1>
       </div>
     </div>
-    <div id="feed"></div>
 
-
-    <script id="post-template" type="text/x-custom-template">
-    <section class="content bloc-img-left ghcms-news">
+    <section class="content bloc-img-right">
       <div class="wrapper">
-        <div class="bloc-pic"><img loading="lazy" src=""></div>
+        <div class="bloc-pic"><img loading="lazy" src="/transtopie/assets/img/spectacles/born-to-be-queer.png" alt=""></div>
         <div class="bloc-text">
-          <h2></h2><h3></h3>
-          <div class="description"></div>
+          <h2>Born to be Queer</h2><h3>conférence gesticulée</h3>
+          <div class="ghcms ghcms-b2bq">
+            <p><strong>Déconstruisons les stéréotypes de genre !</strong> </p>
+            <p>Le genre est une construction sociale à laquelle sont attribués des
+            stéréotypes et des rôles sociaux.</p>
+            <p>Les comprendre et les déconstruire permet
+            de réduire les préjugés ainsi que les comportements discriminatoires.</p>
+          </div>
+          <a class="bloc-link" href="/transtopie/spectacles/born-to-be-queer/" title="">Born to be queer</a>
+
         </div>
       </div>
     </section>
-	</script>    <footer id="footer">
+
+    <section class="content bloc-img-right">
+      <div class="wrapper">
+        <div class="bloc-pic"><img loading="lazy" src="/transtopie/assets/img/spectacles/rue-fait-mauvais-genre.png" alt=""></div>
+        <div class="bloc-text">
+          <h2>La rue fait mauvais genre</h2><h3>conte audiovisuel</h3>
+          <div class="ghcms ghcms-ruemauvaisgenre">
+            <p><strong>Quel rapport entretient la femme à l'espace public la nuit ?</strong></p>
+            <p>Dans la déferlante de #MeToo, ce conte de 45 minutes questionne le rapport de la femme à la rue la nuit et dénonce la misogynie banalisée qui l'occupe. La ville comme danger de lieu de vie pour les femmes est une construction sociale. </p>
+            <p>Invitons la question du genre à se réapproprier de manière égalitaire l'espace public.</p>
+          </div>
+          <a class="bloc-link" href="/transtopie/spectacles/la-rue-fait-mauvais-genre/" title="">La rue fait mauvais genre</a>
+        </div>
+      </div>
+    </section>
+
+
+
+
+    <section class="content bloc-img-left">
+      <div class="wrapper">
+        <div class="bloc-pic"><img loading="lazy" src="/transtopie/assets/img/spectacles/enfer-me-ment.png"></div>
+        <div class="bloc-text">
+          <h2>L'enfer me ment</h2><h3>performance sonore fictionnelle et live painting monumental</h3>
+          <div class="ghcms ghcms-enfermement">
+            <p>La fiction audiovisuelle <em>L'enfer me ment</em> met en scène le parcours de 4 jeunes femmes enfermées en maison de correction dans la première moitié du XXème siècle.</p>
+            <p>Cette création sur-mesure pensée pour les <em>Journées du Matrimoine</em> se base sur des documents d'archives et présente un deuxième volet au spectacle : <em>Résonances</em>. </p>
+          </div>
+        <a class="bloc-link" href="/transtopie/spectacles/enfer-me-ment/" title="">L'enfer me ment</a>
+        </div>
+
+      </div>
+    </section>
+
+
+    <div class="hera"><div style="background-image: url(/transtopie/assets/img/spectacles/resonance-chatelets.jpg)" ></div></div>
+
+    <section class="content bloc-img-right">
+      <div class="wrapper">
+        <div class="bloc-pic"><img loading="lazy" src="/transtopie/assets/img/spectacles/resonance-chatelets.jpg" alt=""></div>
+        <div class="bloc-text">
+          <h2>Résonances</h2><h3>création musicale sur-mesure</h3>
+          <div class="ghcms ghcms-resonance">
+
+
+Dans le cadre du projet DRAC et DRDJSCS C'est mon patrimoine visant à valoriser la mémoire du site patrimonial des Petits Châtelets, Transtopie a proposé une création sur-mesure sous forme de concert. 
+
+Cette création s'est appuyée sur la collecte de documents d'archives authentiques issus de la congrégation religieuse des Sœurs Marie-Joseph du Dorat de la Solitude des Petits Châtelets de 1855 à 2008. 
+
+En partenariat avec les archives départementales de l'Orne et municipales d'Alençon, ce travail d'historien a donné lieu à une composition poétique enveloppée du mélange des sons du site et d'une touche expérimentale par trois artistes. 
+
+Mehdi Meskini aux textes, Pierre Fourmeau à la composition musicale, et Clément Béguet à la trompette, ont délivré lors du vernissage de l'exposition "Les petits Châtelets, d'hier à aujourd'hui" une pièce émouvante et fidèle au passé qui a marqué les esprits du public, à qui cette création a fait résonance.  
+          </div>
+          <a class="bloc-link" href="/transtopie/spectacles/resonance/" title="">Resonance</a>
+        </div>
+
+      </div>
+    </section>
+    <footer id="footer">
       <div class="wrapper">
         <div id="contact-info">
           <p><a title="Transtopie par email" href="mailto:transtopies@gmail.com">transtopies@gmail.com</a></p>
