--- a/action-culturelle/index.html
+++ b/action-culturelle/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="robots" content="noindex, nofollow" />
+    <meta name="robots" content="index, follow" />
     <meta name="author" content="Vincent Delaunay">
     <link rel="author" href="humans.txt" />
 
@@ -18,11 +18,11 @@
     <meta property="og:locale" content="fr_FR" />
     <meta property="og:site_name" content="Transtopie" />
     
-    <!-- <meta name="twitter:site" content="@chapelmele" /> -->    <title>Transtopie</title>
+    <!-- <meta name="twitter:site" content="@chapelmele" /> -->    <title>Transtopie, association Productrice de Culture</title>
     <meta name="description" content="Association productrice de culture, conceptrice d'événements et créatrice de spectacles qui visent à la lutte contre les discriminations par des approches artistiques et culturelles." />
 
 	<!-- technical -->
-	<!--  <meta property="og:url" content="https://chapelmele.com" /> -->
+	<!--  <meta property="og:url" content="https://www" /> -->
 	<meta property="og:type" content="website" />
 	<meta name="twitter:card" content="summary">
 
@@ -31,7 +31,7 @@
 	<!-- content -->
     <meta property="og:title" content="Transtopie" />
 	<meta property="og:description" content="Association productrice de culture, conceptrice d'événements et créatrice de spectacles qui visent à la lutte contre les discriminations par des approches artistiques et culturelles." />
-	<!-- <meta property="og:image" content="https://chapelmele.com/assets/img/logos/chapelmele-splash.png" /> -->
+	<!-- <meta property="og:image" content="https://www/assets/img/logos/chapelmele-splash.png" /> -->
 
   </head>
   <body>
@@ -48,11 +48,11 @@
       <div class="nav">
         <div class="nav-section">
           <ul class="main-menu">
-            <li ><a href="/transtopie/creations/" title="">Spectacles</a></li>
-            <li ><a href="/transtopie/projets-action-culturelle/" title="">Action Culturelle</a></li>
+            <li ><a href="/transtopie/spectacles/" title="">Spectacles</a></li>
+            <li ><a href="/transtopie/action-culturelle/" title="">Action Culturelle</a></li>
             <li><a href="/transtopie/evenements/" title="">Evénements</a></li>
             <li><a href="/transtopie/panier-culture/" title="">Panier Culture</a></li>
-            <li><a href="/transtopie/actualites/" title="">Actualités</a></li>
+            <!-- <li><a href="/transtopie/actualites/" title="">Actualités</a></li> -->
             <li><a href="#footer" title="">Contact</a></li>
             <li class="full-menu-option"><label id="nav-panel-full-menu-in" for="nav-panel-full-menu-checkbox" class="nav-panel-in" title="Afficher les liens vers plus de pages de transtopie.fr"><span>Menu complet</span><img loading="lazy" src="/transtopie/assets/img/logos/menu.png" alt="Ouvrir le menu complet" title="Ouvrir le menu complet"/></label></li>
           </ul>
@@ -87,7 +87,7 @@ Le projet associatif de Transtopie rentre dans le cadre que l’on appelle égal
 
     <section class="content bloc-img-left">
       <div class="wrapper">
-        <div class="bloc-pic"><img loading="lazy" src="/transtopie/assets/img/projets-action-culturelle/word-cloud.jpg" alt=""></div>
+        <div class="bloc-pic"><img loading="lazy" src="/transtopie/assets/img/action-culturelle/word-cloud.jpg" alt=""></div>
         <div class="bloc-text">
           <h2>Construire ensemble</h2><h3>par la transmission et l’échange</h3>
           <div class="ghcms ghcms-construire">
@@ -101,7 +101,7 @@ Le projet associatif de Transtopie rentre dans le cadre que l’on appelle égal
 
     <section class="content bloc-img-right">
       <div class="wrapper">
-        <div class="bloc-pic"><img loading="lazy" src="/transtopie/assets/img/projets-action-culturelle/word-cloud.jpg" alt=""></div>
+        <div class="bloc-pic"><img loading="lazy" src="/transtopie/assets/img/action-culturelle/word-cloud.jpg" alt=""></div>
         <div class="bloc-text">
           <h2>L'association est implantée aux Petits-Châtelets</h2><h3>un tiers-lieu à Alençon</h3>
           <div class="ghcms ghcms-chatelets">
@@ -132,7 +132,7 @@ Le projet associatif de Transtopie rentre dans le cadre que l’on appelle égal
 
     <section class="content bloc-img-left">
       <div class="wrapper">
-        <div class="bloc-pic"><img loading="lazy" src="/transtopie/assets/img/projets-action-culturelle/mediation-culturelle.jpg"></div>
+        <div class="bloc-pic"><img loading="lazy" src="/transtopie/assets/img/action-culturelle/mediation-culturelle.jpg"></div>
         <div class="bloc-text">
           <h2>Mediation culturelle</h2><h3>relation avec le public</h3>
           <div class="ghcms ghcms-mediation">
@@ -174,29 +174,7 @@ L'objectif général est de s'approprier l'environnement social, culturel et pro
       <div class="placeholder"></div>
     </section>
 
-    <div class="hera"><div style="background-image: url(/transtopie/assets/img/projets-action-culturelle/peinture-migrants.jpg)" ></div></div>
-
-
-
-    <section class="content bloc-left">
-      <div class="wrapper">
-        <div class="bloc-text">
-          <h2>Refléxions</h2><h3> transtopiques</h3>
-          <div class="ghcms ghcms-reflexions">
-            
-              <a href="/transtopie/projets-action-culturelle/faut-il-expliquer-l-art/">faut-il-expliquer-l-art</a>
-              <a href="/transtopie/projets-action-culturelle/mythologies/">mythologies</a>
-
-              <iframe id="cc-m-video-container-11277867826" class="cc-m-video-container" src="https://www.youtube-nocookie.com/embed/CDD6NfTnZGg?wmode=transparent&amp;vq=hd1080" allowfullscreen="true" frameborder="0">
-            </iframe>
-
-            <iframe id="cc-m-video-container-11310037126" class="cc-m-video-container" src="https://www.youtube-nocookie.com/embed/tmiygHVmDyA?wmode=transparent&amp;vq=hd1080" allowfullscreen="true" frameborder="0">
-            </iframe>
-          </div>
-        </div>
-      </div>
-      <div class="placeholder"></div>
-    </section>
+    <div class="hera"><div style="background-image: url(/transtopie/assets/img/action-culturelle/peinture-migrants.jpg)" ></div></div>
     <footer id="footer">
       <div class="wrapper">
         <div id="contact-info">
@@ -214,10 +192,10 @@ L'objectif général est de s'approprier l'environnement social, culturel et pro
         <div id="org-details">
           <div id="logos">
             <ul>
-              <li><a href="/activites-culturelles/" title="Transtopie"><img load="lazy" src="/transtopie/assets/img/logos/logo-chapelmele-red-small.png" title="Logo de Transtopie" alt="Logo de Transtopie"/></a></li>
+              <!-- <li><a href="/activites-culturelles/" title="Transtopie"><img load="lazy" src="/transtopie/assets/img/logos/logo-chapelmele-red-small.png" title="Logo de Transtopie" alt="Logo de Transtopie"/></a></li> -->
               <li><a href="https://chapelmele.com/tiers-lieu-alencon/" title="Les Petits Châtelets"><img class="petits-chatelets" src="/transtopie/assets/img/logos/logo-chatelets-big.png" title="Logo des Petits Châtelets" alt="Logo des Petits Châtelets"/></a></li>
               <li><img load="lazy" src="/transtopie/assets/img/logos/logo-ville-alencon.png" title="Logo de la ville d'Alençon" alt="Logo de la ville d'Alençon"/></li>
-              <li><img load="lazy" src="/transtopie/assets/img/logos/logo-departement-orne.png" title="Logo du département de l'Orne" alt="Logo du département de l'Orne"/></li>
+              <!-- <li><img load="lazy" src="/transtopie/assets/img/logos/logo-departement-orne.png" title="Logo du département de l'Orne" alt="Logo du département de l'Orne"/></li> -->
             </ul>
           </div>
         </div>
@@ -229,7 +207,7 @@ L'objectif général est de s'approprier l'environnement social, culturel et pro
     <!-- https://web.dev/defer-non-critical-css/ --><!-- 
     <link rel="preload" href="/assets/css/main.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="/assets/css/main.css"></noscript> -->
-
+<script type="text/javascript">document.getElementById('header-title').innerText = "Site en construction";</script>
     <script defer="defer" async="async" async src="/transtopie/assets/js/general-dispatch.js"></script>
 
 
