--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="robots" content="noindex, nofollow" />
+    <meta name="robots" content="index, follow" />
     <meta name="author" content="Vincent Delaunay">
     <link rel="author" href="humans.txt" />
 
@@ -18,21 +18,8 @@
     <meta property="og:locale" content="fr_FR" />
     <meta property="og:site_name" content="Transtopie" />
     
-    <!-- <meta name="twitter:site" content="@chapelmele" /> -->    <title>Transtopie</title>
+    <!-- <meta name="twitter:site" content="@chapelmele" /> -->    <title>Transtopie - association Productrice de Culture</title>
     <meta name="description" content="Association productrice de culture, conceptrice d'événements et créatrice de spectacles qui visent à la lutte contre les discriminations par des approches artistiques et culturelles." />
-
-	<!-- technical -->
-	<!--  <meta property="og:url" content="https://chapelmele.com" /> -->
-	<meta property="og:type" content="website" />
-	<meta name="twitter:card" content="summary">
-
-	<!-- <meta name="twitter:creator" content="@" /> -->
-	
-	<!-- content -->
-    <meta property="og:title" content="Transtopie" />
-	<meta property="og:description" content="Association productrice de culture, conceptrice d'événements et créatrice de spectacles qui visent à la lutte contre les discriminations par des approches artistiques et culturelles." />
-	<!-- <meta property="og:image" content="https://chapelmele.com/assets/img/logos/chapelmele-splash.png" /> -->
-
   </head>
   <body>
 
@@ -48,11 +35,11 @@
       <div class="nav">
         <div class="nav-section">
           <ul class="main-menu">
-            <li ><a href="/transtopie/creations/" title="">Spectacles</a></li>
-            <li ><a href="/transtopie/projets-action-culturelle/" title="">Action Culturelle</a></li>
+            <li ><a href="/transtopie/spectacles/" title="">Spectacles</a></li>
+            <li ><a href="/transtopie/action-culturelle/" title="">Action Culturelle</a></li>
             <li><a href="/transtopie/evenements/" title="">Evénements</a></li>
             <li><a href="/transtopie/panier-culture/" title="">Panier Culture</a></li>
-            <li><a href="/transtopie/actualites/" title="">Actualités</a></li>
+            <!-- <li><a href="/transtopie/actualites/" title="">Actualités</a></li> -->
             <li><a href="#footer" title="">Contact</a></li>
             <li class="full-menu-option"><label id="nav-panel-full-menu-in" for="nav-panel-full-menu-checkbox" class="nav-panel-in" title="Afficher les liens vers plus de pages de transtopie.fr"><span>Menu complet</span><img loading="lazy" src="/transtopie/assets/img/logos/menu.png" alt="Ouvrir le menu complet" title="Ouvrir le menu complet"/></label></li>
           </ul>
@@ -86,7 +73,7 @@
             </ul>
           </div>
           <div class="bloc-links-list">
-            <a class="bloc-link" href="/creations/" title="">Spéctacles</a>
+            <a class="bloc-link" href="/transtopie/spectacles/" title="">Spéctacles</a>
           </div>
         </div>
       </div>
@@ -159,10 +146,10 @@
         <div id="org-details">
           <div id="logos">
             <ul>
-              <li><a href="/activites-culturelles/" title="Transtopie"><img load="lazy" src="/transtopie/assets/img/logos/logo-chapelmele-red-small.png" title="Logo de Transtopie" alt="Logo de Transtopie"/></a></li>
+              <!-- <li><a href="/activites-culturelles/" title="Transtopie"><img load="lazy" src="/transtopie/assets/img/logos/logo-chapelmele-red-small.png" title="Logo de Transtopie" alt="Logo de Transtopie"/></a></li> -->
               <li><a href="https://chapelmele.com/tiers-lieu-alencon/" title="Les Petits Châtelets"><img class="petits-chatelets" src="/transtopie/assets/img/logos/logo-chatelets-big.png" title="Logo des Petits Châtelets" alt="Logo des Petits Châtelets"/></a></li>
               <li><img load="lazy" src="/transtopie/assets/img/logos/logo-ville-alencon.png" title="Logo de la ville d'Alençon" alt="Logo de la ville d'Alençon"/></li>
-              <li><img load="lazy" src="/transtopie/assets/img/logos/logo-departement-orne.png" title="Logo du département de l'Orne" alt="Logo du département de l'Orne"/></li>
+              <!-- <li><img load="lazy" src="/transtopie/assets/img/logos/logo-departement-orne.png" title="Logo du département de l'Orne" alt="Logo du département de l'Orne"/></li> -->
             </ul>
           </div>
         </div>
@@ -174,7 +161,7 @@
     <!-- https://web.dev/defer-non-critical-css/ --><!-- 
     <link rel="preload" href="/assets/css/main.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="/assets/css/main.css"></noscript> -->
-
+<script type="text/javascript">document.getElementById('header-title').innerText = "Site en construction";</script>
     <script defer="defer" async="async" async src="/transtopie/assets/js/general-dispatch.js"></script>
 
 
