--- a/spectacles/born-to-be-queer/index.html
+++ b/spectacles/born-to-be-queer/index.html
@@ -60,26 +60,91 @@
       </div>
     </header>
 
-    <div id="hero" class="hero hero-top" style="background-image: url(/transtopie/assets/img/backgrounds/bg3.jpg)" >
+    <div id="hero" class="hero hero-top" style="background-image: url(/transtopie/assets/img/backgrounds/bg2.jpg)" >
       <div>
         <img src="/transtopie/assets/img/logo.png"/>
-          <h1>Actualités</h1>
+          <h1>Born to be Queer</h1>
       </div>
     </div>
-    <div id="feed"></div>
 
-
-    <script id="post-template" type="text/x-custom-template">
-    <section class="content bloc-img-left ghcms-news">
+    <section class="content bloc-img-right">
       <div class="wrapper">
-        <div class="bloc-pic"><img loading="lazy" src=""></div>
+        <div class="bloc-pic"><img loading="lazy" src="/transtopie/assets/img/spectacles/rue-fait-mauvais-genre.png" alt=""></div>
         <div class="bloc-text">
-          <h2></h2><h3></h3>
-          <div class="description"></div>
+          <h2>Construction de l'identité de genre</h2><h3>conférence gesticulée</h3>
+          <div class="ghcms ghcms-pres1">
+            <p>Quel rapport entretient la femme à l'espace public la nuit ? La rue, de nuit, jongle entre ombre et lumière. La nuit porte en elle les paradoxes de la ville lumière, festive, permissive comme la crainte du sombre, de l'inconnu, du danger. </p>
+            <p>
+
+Cette performance questionne le rapport de la femme à la rue la nuit et dénonce la misogynie banalisée qui l'occupe. La ville comme danger de lieu de vie pour les femmes est une construction sociale à laquelle nous ne pouvons pas déroger actuellement. Ainsi, cette performance se propose d’exposer une série de situations ordinaires qui se passent dans la rue sous l’angle du regard critique sur les dangers et intimidations que subissent les femmes au quotidien. Plaçons la question des rapports de genres en ville au cœur des préoccupations et invitons à se réapproprier de manière égalitaire l'espace public.</p>
+<a href="https://www.calameo.com/books/006058682b52dc5e5af2d" target="_blank">Dos Présentation La Rue Fait Mauvais Genre Transtopie</a>
+<iframe src="//v.calameo.com/?bkcode=006058682b52dc5e5af2d&amp;mode=mini" scrolling="no" allowtransparency="" allowfullscreen="allowfullscreen" style="margin:0 auto;" width="480" height="300" frameborder="0"></iframe>
+          </div>
         </div>
       </div>
     </section>
-	</script>    <footer id="footer">
+
+    <section class="content bloc-img-left">
+      <div class="wrapper">
+        <div class="bloc-pic"><img loading="lazy" src=""></div>
+        <div class="bloc-text">
+          <h2>Intention</h2><h3> et interviews</h3>
+          <div class="ghcms ghcms-pres2">
+            Ce spectacle invite particulièrement les femmes à se questionner sur leur rapport à l’espace public, souvent perçu comme le lieu de tous  les dangers, en interrogeant les risques. Les femmes utilisent l’espace public, c’est-à-dire accessible à tous et gratuit, de manière différente  des hommes la nuit, par peur des incivilités et agressions mais également du fait d’un sentiment d’insécurité généré par les injonctions sociales auxquelles elles sont sujettes. À quel point ces perceptions d’insécurité sont-elles socialement construites ? Et comment pouvons-nous les renverser ?
+            <iframe src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&amp;feed=%2FKolectiv_webradio%2F24-novembre-2020-itw-malou-estenne-la-rue-fait-mauvais-genre%2F" width="100%" height="120" frameborder="0"></iframe>
+            <iframe id="cc-m-video-container-12631597726" class="cc-m-video-container" src="https://www.youtube-nocookie.com/embed/GZxMGZvvBxo?wmode=transparent&amp;vq=hd1080" allowfullscreen="true" frameborder="0">
+            </iframe>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+    <section class="content bloc-img-right">
+      <div class="wrapper">
+        <div class="bloc-pic"><img loading="lazy" src="" alt=""></div>
+        <div class="bloc-text">
+          <h2>Dates</h2><h3>passées et à venir</h3>
+          <div class="ghcms ghcms-dates">
+            <p>
+    Annulé 6 novembre : Fontenai les Louvets (61) programmé par l'association D'Ecouves Verte
+    Annulé 25 novembre : L'Aigle (61) dans le cadre de la semaine de l'égalité, CIDFF Orne
+    Annulé 28 novembre : Alençon (61), programmé par le Planning familial 61
+</p>
+<p>
+
+    25 février et 3 mars : Alençon (61) festival Culture(s) Ombre et lumière
+    19 juin : Itinéraire bis café, Toulouse (31)
+    20 et 21 juin : Festival hors lits, Toulouse (31)
+    12 juillet : Lorient (56), avec le collectif de collages féministes
+    13 juillet : Mellac (29) Collectif Causine
+    20 juillet : Café chez Lili, Germ (65)
+    23 juillet : Toulouse (31) collectif de collages féministes
+    22 août : Rennes (35), La part des Anges
+    11 septembre : Sainte Honorine la Guillaume (61) programmé par l'association Les Sonorines
+    12 & 13 septembre : Festival Meutes de chiennes (53)
+    1 octobre : Le Mans (72), association Homogène</p>
+
+          </div>
+
+          <a class="bloc-link" href="/transtopie/actualites/" title="Présentation des conditions d'accueil pour nos résidences artistiques">Dates</a>
+        </div>
+      </div>
+    </section>
+
+    <section class="content bloc-img-left">
+      <div class="wrapper">
+        <div class="bloc-pic"><img loading="lazy" src=""></div>
+        <div class="bloc-text">
+          <h2>Fiche technique</h2><h3>a discuter</h3>
+          <div class="ghcms ghcms-fichetech">
+            
+
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer id="footer">
       <div class="wrapper">
         <div id="contact-info">
           <p><a title="Transtopie par email" href="mailto:transtopies@gmail.com">transtopies@gmail.com</a></p>
