[backend] abort, revert, hide from crawlers

--- a/spectacles/la-rue-fait-mauvais-genre/index.html
+++ b/spectacles/la-rue-fait-mauvais-genre/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="robots" content="index, follow" />
+    <meta name="robots" content="noindex, nofollow" />
     <meta name="author" content="Vincent Delaunay">
     <link rel="author" href="humans.txt" />
 
@@ -191,7 +191,7 @@ Cette performance questionne le rapport de la femme à la rue la nuit et dénonc
           </div>
         </div>
 
-        <p class="credit">Réalisation <a href="http://centime.fr" title="Site perso du créateur de chapelmele.com">Vincent Delaunay</a>, 2021</p>
+        <!-- <p class="credit">Réalisation <a href="http://centime.fr" title="Site perso du créateur de chapelmele.com">Vincent Delaunay</a>, 2021</p> -->
       </div>
     </footer>
 
