--- a/action-culturelle/index.html
+++ b/action-culturelle/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="robots" content="index, follow" />
+    <meta name="robots" content="noindex, nofollow" />
     <meta name="author" content="Vincent Delaunay">
     <link rel="author" href="humans.txt" />
 
@@ -200,7 +200,7 @@ L'objectif général est de s'approprier l'environnement social, culturel et pro
           </div>
         </div>
 
-        <p class="credit">Réalisation <a href="http://centime.fr" title="Site perso du créateur de chapelmele.com">Vincent Delaunay</a>, 2021</p>
+        <!-- <p class="credit">Réalisation <a href="http://centime.fr" title="Site perso du créateur de chapelmele.com">Vincent Delaunay</a>, 2021</p> -->
       </div>
     </footer>
 
