[backend] absolute path new root

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="robots" content="noindex, nofollow" />
+    <meta name="robots" content="index, follow" />
     <meta name="author" content="Vincent Delaunay">
     <link rel="author" href="humans.txt" />
 
 <!--     <link rel="preload" href="/assets/fonts/IntriqueScript_PersonalUse.ttf" as="font" type="font/tff"> -->
-    <link rel="stylesheet" href="/transtopie/assets/css/main.css">
+    <link rel="stylesheet" href="/assets/css/main.css">
     <!-- <link rel="dns-prefetch preconnect" href="https://data.chapelmele.com" crossorigin="anonymous"/> -->
     
     <!-- https://realfavicongenerator.net/ -->
@@ -28,36 +28,36 @@
     <input type="checkbox" id="nav-panel-checkbox" autocomplete="off">
     <header>
       <div class="nav-toggle">      
-        <label id="nav-panel-in" for="nav-panel-checkbox" class="nav-panel-in" title="Ouvrir le menu"><div><img loading="lazy" src="/transtopie/assets/img/logos/menu.png" alt="Ouvrir le menu" title="Ouvrir le menu"/></div></label>
+        <label id="nav-panel-in" for="nav-panel-checkbox" class="nav-panel-in" title="Ouvrir le menu"><div><img loading="lazy" src="/assets/img/logos/menu.png" alt="Ouvrir le menu" title="Ouvrir le menu"/></div></label>
         <label id="nav-panel-out" for="nav-panel-checkbox" class="nav-panel-out" title="Fermer le menu"></label>
       </div>
-      <a id="header-title" href="/transtopie/" title="Retour à la page d'accueil"><img src="/transtopie/assets/img/logo.png"/></a>
+      <a id="header-title" href="/" title="Retour à la page d'accueil"><img src="/assets/img/logo.png"/></a>
       <div class="nav">
         <div class="nav-section">
           <ul class="main-menu">
-            <li ><a href="/transtopie/spectacles/" title="">Spectacles</a></li>
-            <li ><a href="/transtopie/action-culturelle/" title="">Action Culturelle</a></li>
-            <li><a href="/transtopie/evenements/" title="">Evénements</a></li>
-            <li><a href="/transtopie/panier-culture/" title="">Panier Culture</a></li>
-            <!-- <li><a href="/transtopie/actualites/" title="">Actualités</a></li> -->
+            <li ><a href="/spectacles/" title="">Spectacles</a></li>
+            <li ><a href="/action-culturelle/" title="">Action Culturelle</a></li>
+            <li><a href="/evenements/" title="">Evénements</a></li>
+            <li><a href="/panier-culture/" title="">Panier Culture</a></li>
+            <!-- <li><a href="/actualites/" title="">Actualités</a></li> -->
             <li><a href="#footer" title="">Contact</a></li>
-            <li class="full-menu-option"><label id="nav-panel-full-menu-in" for="nav-panel-full-menu-checkbox" class="nav-panel-in" title="Afficher les liens vers plus de pages de transtopie.fr"><span>Menu complet</span><img loading="lazy" src="/transtopie/assets/img/logos/menu.png" alt="Ouvrir le menu complet" title="Ouvrir le menu complet"/></label></li>
+            <li class="full-menu-option"><label id="nav-panel-full-menu-in" for="nav-panel-full-menu-checkbox" class="nav-panel-in" title="Afficher les liens vers plus de pages de transtopie.fr"><span>Menu complet</span><img loading="lazy" src="/assets/img/logos/menu.png" alt="Ouvrir le menu complet" title="Ouvrir le menu complet"/></label></li>
           </ul>
         </div>
       </div>
     </header>
 
-    <div id="hero" style="background-image:url(/transtopie/assets/img/backgrounds/bg.jpg) !important">
+    <div id="hero" style="background-image:url(/assets/img/backgrounds/bg.jpg) !important">
       <div>
-        <img src="/transtopie/assets/img/logo.png" alt="Transtopie"/>
+        <img src="/assets/img/logo.png" alt="Transtopie"/>
         <h1>Transtopie</h1>
       </div>
     </div>
 
-        <!-- <div id="full-bg" style="background-image:url(/transtopie/assets/img/backgrounds/bg2.jpg)"></div> -->
+        <!-- <div id="full-bg" style="background-image:url(/assets/img/backgrounds/bg2.jpg)"></div> -->
     <section class="content bloc-img-right">
       <div class="wrapper  straight">
-        <div class="bloc-pic"><img loading="lazy" src="/transtopie/assets/img/spectacles/rue-fait-mauvais-genre.png" alt="" title=""></div>
+        <div class="bloc-pic"><img loading="lazy" src="/assets/img/spectacles/rue-fait-mauvais-genre.png" alt="" title=""></div>
         <div class="bloc-text">
           <h2>Spectacles</h2>
           <h3>association productrice de culture</h3>
@@ -73,7 +73,7 @@
             </ul>
           </div>
           <div class="bloc-links-list">
-            <a class="bloc-link" href="/transtopie/spectacles/" title="">Spéctacles</a>
+            <a class="bloc-link" href="/spectacles/" title="">Spéctacles</a>
           </div>
         </div>
       </div>
@@ -81,9 +81,9 @@
 <section class="content" id="three-slide">
       <div class="wrapper">
         <ul class="slider">
-          <li class="back"><img loading="lazy" src="/transtopie/assets/img/spectacles/enfer-me-ment.png" alt="" title=""></li>
-          <li class="current"><img loading="lazy" src="/transtopie/assets/img/spectacles/born-to-be-queer.png"  alt="" title=""></li>
-          <li class="front"><img loading="lazy" src="/transtopie/assets/img/spectacles/resonance.png" alt="" title=""></li>
+          <li class="back"><img loading="lazy" src="/assets/img/spectacles/enfer-me-ment.png" alt="" title=""></li>
+          <li class="current"><img loading="lazy" src="/assets/img/spectacles/born-to-be-queer.png"  alt="" title=""></li>
+          <li class="front"><img loading="lazy" src="/assets/img/spectacles/resonance.png" alt="" title=""></li>
         </ul>
       </div>
     </section>
@@ -100,13 +100,13 @@
               <p>Nos projets mettent l'accent sur la <strong>lutte contre les discriminations, l'accès à la culture pour tous</strong>, et visent à renforcer l’identité des artistes et les réseaux acteurs culturels locaux. Toujours dans une logique <strong>d'intérêt général, de solidarité et de coopération</strong>.</p>
             </div>
           </div>
-          <a class="bloc-link" href="/transtopie/action-culturelle/" title="">Action Culturelle</a>
+          <a class="bloc-link" href="/action-culturelle/" title="">Action Culturelle</a>
         </div>
       </div>
       <div class="placeholder"></div>
     </section>
 
-    <div class="hera"><div style="background-image: url(/transtopie/assets/img/bisou-masque.jpg)" ></div></div>
+    <div class="hera"><div style="background-image: url(/assets/img/bisou-masque.jpg)" ></div></div>
 
     <section class="content bloc-right">
       <div class="wrapper">
@@ -121,8 +121,8 @@
             <p>Pour le maintien d'une culture locale et d'alternatives en matière de création artistique </p>
           
           </div>
-          <a class="bloc-link" href="/transtopie/evenements/" title="">Festivals</a>
-          <a class="bloc-link" href="/transtopie/panier-culture/" title="">Panier Culture</a>
+          <a class="bloc-link" href="/evenements/" title="">Festivals</a>
+          <a class="bloc-link" href="/panier-culture/" title="">Panier Culture</a>
         </div>
       </div>
       <div class="placeholder"></div>
@@ -134,7 +134,7 @@
         <div id="contact-info">
           <p><a title="Transtopie par email" href="mailto:transtopies@gmail.com">transtopies@gmail.com</a></p>
           <p>
-            <a title="Transtopie sur Facebook" target="_blank" href="https://www.facebook.com/transtopie/"><span class="sprite-icon facebook"></span></a>
+            <a title="Transtopie sur Facebook" target="_blank" href="https://www.facebook.com/"><span class="sprite-icon facebook"></span></a>
             <a title="Transtopie sur YouTube" target="_blank" href="
             https://www.youtube.com/channel/UCP3q3TBqtL-80P4M-XJ6YiQ"><span class="sprite-icon youtube"></span></a>
           </p>
@@ -146,10 +146,10 @@
         <div id="org-details">
           <div id="logos">
             <ul>
-              <!-- <li><a href="/activites-culturelles/" title="Transtopie"><img load="lazy" src="/transtopie/assets/img/logos/logo-chapelmele-red-small.png" title="Logo de Transtopie" alt="Logo de Transtopie"/></a></li> -->
-              <li><a href="https://chapelmele.com/tiers-lieu-alencon/" title="Les Petits Châtelets"><img class="petits-chatelets" src="/transtopie/assets/img/logos/logo-chatelets-big.png" title="Logo des Petits Châtelets" alt="Logo des Petits Châtelets"/></a></li>
-              <li><img load="lazy" src="/transtopie/assets/img/logos/logo-ville-alencon.png" title="Logo de la ville d'Alençon" alt="Logo de la ville d'Alençon"/></li>
-              <!-- <li><img load="lazy" src="/transtopie/assets/img/logos/logo-departement-orne.png" title="Logo du département de l'Orne" alt="Logo du département de l'Orne"/></li> -->
+              <!-- <li><a href="/activites-culturelles/" title="Transtopie"><img load="lazy" src="/assets/img/logos/logo-chapelmele-red-small.png" title="Logo de Transtopie" alt="Logo de Transtopie"/></a></li> -->
+              <li><a href="https://chapelmele.com/tiers-lieu-alencon/" title="Les Petits Châtelets"><img class="petits-chatelets" src="/assets/img/logos/logo-chatelets-big.png" title="Logo des Petits Châtelets" alt="Logo des Petits Châtelets"/></a></li>
+              <li><img load="lazy" src="/assets/img/logos/logo-ville-alencon.png" title="Logo de la ville d'Alençon" alt="Logo de la ville d'Alençon"/></li>
+              <!-- <li><img load="lazy" src="/assets/img/logos/logo-departement-orne.png" title="Logo du département de l'Orne" alt="Logo du département de l'Orne"/></li> -->
             </ul>
           </div>
         </div>
@@ -162,7 +162,7 @@
     <link rel="preload" href="/assets/css/main.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="/assets/css/main.css"></noscript> -->
 <script type="text/javascript">document.getElementById('header-title').innerText = "Site en construction";</script>
-    <script defer="defer" async="async" async src="/transtopie/assets/js/general-dispatch.js"></script>
+    <script defer="defer" async="async" async src="/assets/js/general-dispatch.js"></script>
 
 
   </body>
