--- a/spectacles/born-to-be-queer/index.html
+++ b/spectacles/born-to-be-queer/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="robots" content="noindex, nofollow" />
+    <meta name="robots" content="index, follow" />
     <meta name="author" content="Vincent Delaunay">
     <link rel="author" href="humans.txt" />
 
 <!--     <link rel="preload" href="/assets/fonts/IntriqueScript_PersonalUse.ttf" as="font" type="font/tff"> -->
-    <link rel="stylesheet" href="/transtopie/assets/css/main.css">
+    <link rel="stylesheet" href="/assets/css/main.css">
     <!-- <link rel="dns-prefetch preconnect" href="https://data.chapelmele.com" crossorigin="anonymous"/> -->
     
     <!-- https://realfavicongenerator.net/ -->
@@ -41,35 +41,35 @@
     <input type="checkbox" id="nav-panel-checkbox" autocomplete="off">
     <header>
       <div class="nav-toggle">      
-        <label id="nav-panel-in" for="nav-panel-checkbox" class="nav-panel-in" title="Ouvrir le menu"><div><img loading="lazy" src="/transtopie/assets/img/logos/menu.png" alt="Ouvrir le menu" title="Ouvrir le menu"/></div></label>
+        <label id="nav-panel-in" for="nav-panel-checkbox" class="nav-panel-in" title="Ouvrir le menu"><div><img loading="lazy" src="/assets/img/logos/menu.png" alt="Ouvrir le menu" title="Ouvrir le menu"/></div></label>
         <label id="nav-panel-out" for="nav-panel-checkbox" class="nav-panel-out" title="Fermer le menu"></label>
       </div>
-      <a id="header-title" href="/transtopie/" title="Retour à la page d'accueil"><img src="/transtopie/assets/img/logo.png"/></a>
+      <a id="header-title" href="/" title="Retour à la page d'accueil"><img src="/assets/img/logo.png"/></a>
       <div class="nav">
         <div class="nav-section">
           <ul class="main-menu">
-            <li ><a href="/transtopie/spectacles/" title="">Spectacles</a></li>
-            <li ><a href="/transtopie/action-culturelle/" title="">Action Culturelle</a></li>
-            <li><a href="/transtopie/evenements/" title="">Evénements</a></li>
-            <li><a href="/transtopie/panier-culture/" title="">Panier Culture</a></li>
-            <!-- <li><a href="/transtopie/actualites/" title="">Actualités</a></li> -->
+            <li ><a href="/spectacles/" title="">Spectacles</a></li>
+            <li ><a href="/action-culturelle/" title="">Action Culturelle</a></li>
+            <li><a href="/evenements/" title="">Evénements</a></li>
+            <li><a href="/panier-culture/" title="">Panier Culture</a></li>
+            <!-- <li><a href="/actualites/" title="">Actualités</a></li> -->
             <li><a href="#footer" title="">Contact</a></li>
-            <li class="full-menu-option"><label id="nav-panel-full-menu-in" for="nav-panel-full-menu-checkbox" class="nav-panel-in" title="Afficher les liens vers plus de pages de transtopie.fr"><span>Menu complet</span><img loading="lazy" src="/transtopie/assets/img/logos/menu.png" alt="Ouvrir le menu complet" title="Ouvrir le menu complet"/></label></li>
+            <li class="full-menu-option"><label id="nav-panel-full-menu-in" for="nav-panel-full-menu-checkbox" class="nav-panel-in" title="Afficher les liens vers plus de pages de transtopie.fr"><span>Menu complet</span><img loading="lazy" src="/assets/img/logos/menu.png" alt="Ouvrir le menu complet" title="Ouvrir le menu complet"/></label></li>
           </ul>
         </div>
       </div>
     </header>
 
-    <div id="hero" class="hero hero-top" style="background-image: url(/transtopie/assets/img/backgrounds/bg2.jpg)" >
+    <div id="hero" class="hero hero-top" style="background-image: url(/assets/img/backgrounds/bg2.jpg)" >
       <div>
-        <img src="/transtopie/assets/img/logo.png"/>
+        <img src="/assets/img/logo.png"/>
           <h1>Born to be Queer</h1>
       </div>
     </div>
 
     <section class="content bloc-img-right">
       <div class="wrapper">
-        <div class="bloc-pic"><img loading="lazy" src="/transtopie/assets/img/spectacles/rue-fait-mauvais-genre.png" alt=""></div>
+        <div class="bloc-pic"><img loading="lazy" src="/assets/img/spectacles/rue-fait-mauvais-genre.png" alt=""></div>
         <div class="bloc-text">
           <h2>Construction de l'identité de genre</h2><h3>conférence gesticulée</h3>
           <div class="ghcms ghcms-pres1">
@@ -127,7 +127,7 @@ Cette performance questionne le rapport de la femme à la rue la nuit et dénonc
 
           </div>
 
-          <a class="bloc-link" href="/transtopie/actualites/" title="Présentation des conditions d'accueil pour nos résidences artistiques">Dates</a>
+          <a class="bloc-link" href="/actualites/" title="Présentation des conditions d'accueil pour nos résidences artistiques">Dates</a>
         </div>
       </div>
     </section>
@@ -149,7 +149,7 @@ Cette performance questionne le rapport de la femme à la rue la nuit et dénonc
         <div id="contact-info">
           <p><a title="Transtopie par email" href="mailto:transtopies@gmail.com">transtopies@gmail.com</a></p>
           <p>
-            <a title="Transtopie sur Facebook" target="_blank" href="https://www.facebook.com/transtopie/"><span class="sprite-icon facebook"></span></a>
+            <a title="Transtopie sur Facebook" target="_blank" href="https://www.facebook.com/"><span class="sprite-icon facebook"></span></a>
             <a title="Transtopie sur YouTube" target="_blank" href="
             https://www.youtube.com/channel/UCP3q3TBqtL-80P4M-XJ6YiQ"><span class="sprite-icon youtube"></span></a>
           </p>
@@ -161,10 +161,10 @@ Cette performance questionne le rapport de la femme à la rue la nuit et dénonc
         <div id="org-details">
           <div id="logos">
             <ul>
-              <!-- <li><a href="/activites-culturelles/" title="Transtopie"><img load="lazy" src="/transtopie/assets/img/logos/logo-chapelmele-red-small.png" title="Logo de Transtopie" alt="Logo de Transtopie"/></a></li> -->
-              <li><a href="https://chapelmele.com/tiers-lieu-alencon/" title="Les Petits Châtelets"><img class="petits-chatelets" src="/transtopie/assets/img/logos/logo-chatelets-big.png" title="Logo des Petits Châtelets" alt="Logo des Petits Châtelets"/></a></li>
-              <li><img load="lazy" src="/transtopie/assets/img/logos/logo-ville-alencon.png" title="Logo de la ville d'Alençon" alt="Logo de la ville d'Alençon"/></li>
-              <!-- <li><img load="lazy" src="/transtopie/assets/img/logos/logo-departement-orne.png" title="Logo du département de l'Orne" alt="Logo du département de l'Orne"/></li> -->
+              <!-- <li><a href="/activites-culturelles/" title="Transtopie"><img load="lazy" src="/assets/img/logos/logo-chapelmele-red-small.png" title="Logo de Transtopie" alt="Logo de Transtopie"/></a></li> -->
+              <li><a href="https://chapelmele.com/tiers-lieu-alencon/" title="Les Petits Châtelets"><img class="petits-chatelets" src="/assets/img/logos/logo-chatelets-big.png" title="Logo des Petits Châtelets" alt="Logo des Petits Châtelets"/></a></li>
+              <li><img load="lazy" src="/assets/img/logos/logo-ville-alencon.png" title="Logo de la ville d'Alençon" alt="Logo de la ville d'Alençon"/></li>
+              <!-- <li><img load="lazy" src="/assets/img/logos/logo-departement-orne.png" title="Logo du département de l'Orne" alt="Logo du département de l'Orne"/></li> -->
             </ul>
           </div>
         </div>
@@ -177,7 +177,7 @@ Cette performance questionne le rapport de la femme à la rue la nuit et dénonc
     <link rel="preload" href="/assets/css/main.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="/assets/css/main.css"></noscript> -->
 <script type="text/javascript">document.getElementById('header-title').innerText = "Site en construction";</script>
-    <script defer="defer" async="async" async src="/transtopie/assets/js/general-dispatch.js"></script>
+    <script defer="defer" async="async" async src="/assets/js/general-dispatch.js"></script>
 
 
   </body>
